@@ -17,6 +17,8 @@
     background-color: #303640;
     border-top: 1px solid #23272e;
     box-shadow: 0 3px 3px rgba(17, 17, 17, 0.125);
+
+    cursor: pointer;
 }
 
 .LedgerHeading {
